@@ -36,29 +36,40 @@ monster_hp_rate: 100
 // The maximum attack speed of a monster
 monster_max_aspd: 199
 
-// Defines various mob AI related settings. The mask bits are (add to include multiple settings)
-// 1: When enabled mobs will update their target cell every few iterations
-//    (normally they never update their target cell until they reach it while
-//    chasing)
-// 2: Makes mob use their "rude attack" skill (usually warping away) if they are attacked and they
-//    can't attack back regardless of how they were attacked (eg: GrimTooth), otherwise, their 
-//    rude attack" is only activated if they can't melee reach the target (eg: sniping)
-// 4: If not set, mobs that can change target only do so when melee attacked (distance player/mob < 3),
-//    otherwise mobs may change target and chase ranged attackers. This flag also overrides the 'provoke' target.
-// 8: If set, when a mob loses track of their target, they stop walking inmediately. Otherwise, they continue
-//    to their last target tile. When set mobs also scatter as soon as they lose their target. Use this mode to 
-//    make it much harder to mob-train by hiding and collecting them on a single spot (ie: GrimTooth training)
-//16: If set, mob skills defined for friends will also trigger on themselves.
-//32: When set, the monster ai is executed for all monsters in maps that have 
-//    players on them, instead of only for mobs who are in the vecinity of players.
-//64: When set, when the mob's target changes map, the mob will walk towards
-//    any npc-warps in it's sight of view (use with mob_npc_warp below)
-//128: When set, aggressive mobs will give the same priority to Homuns and
-//    players and will go after the closest target instead of always picking
-//    the homunculus
-//    
-//256: When set, a mob will pick a random skill from it's list and start from that instead of checking skills
-//    in orders (when unset, if a mob has too many skills, the ones near the end will rarely get selected)
+// Defines various mob AI related settings. The mask bits are 
+// (add to include multiple settings):
+// 0x001: When enabled mobs will update their target cell every few iterations
+//        (normally they never update their target cell until they reach it while
+//        chasing)
+// 0x002: Makes mob use their "rude attack" skill (usually warping away) if they
+//        are attacked and they can't attack back regardless of how they were
+//        attacked (eg: GrimTooth), otherwise, their rude attack" is only activated
+//        if they can't melee reach the target (eg: sniping)
+// 0x004: If not set, mobs that can change target only do so when melee attacked
+//        (distance player/mob < 3), otherwise mobs may change target and chase 
+//        ranged attackers. This flag also overrides the 'provoke' target.
+// 0x008: If set, when a mob loses track of their target, they stop walking
+//        inmediately. Otherwise, they continue to their last target tile. When
+//        set mobs also scatter as soon as they lose their target. Use this mode
+//        to make it much harder to mob-train by hiding and collecting them on a
+//        single spot (ie: GrimTooth training)
+// 0x010: If set, mob skills defined for friends will also trigger on themselves.
+// 0x020: When set, the monster ai is executed for all monsters in maps that 
+//        have players on them, instead of only for mobs who are in the vecinity
+//        of players.
+// 0x040: When set, when the mob's target changes map, the mob will walk towards
+//        any npc-warps in it's sight of view (use with mob_npc_warp below)
+// 0x080: When set, aggressive mobs will give the same priority to Homuns and
+//        players and will go after the closest target instead of always picking
+//        the homunculus
+// 0x100: When set, a mob will pick a random skill from it's list and start from
+//        that instead of checking skills in orders (when unset, if a mob has too
+//        many skills, the ones near the end will rarely get selected)
+// 0x200: When set, a mob's skill re-use delay will be applied to all entries of
+//        the same skill, instead of only that particular entry (eg: Mob has heal
+//        on six lines for different conditions, when set, whenever one of the six 
+//        trigger, all of them will share the delay)
+// Example: 0x140 -> Chase players through warps + use skills in random order.
 monster_ai: 0
 
 // Should mobs be able to be warped (add as needed)?
